--- a/templates/manage_order.html
+++ b/templates/manage_order.html
@@ -9,7 +9,7 @@ function process(url){
 </script>
 {% endblock %}
 {% block mid %}
-<table>
+<table class="table">
     <thead>
     <tr>
         <td>生成时间</td>
