--- a/templates/manage_order.html
+++ b/templates/manage_order.html
@@ -3,7 +3,8 @@
 <script type="text/javascript">
 function process(url){
     $.post(url,{},function(d){
-       location.reload();
+        alert("成功确认付款");
+        location.reload();
     });
 }
 </script>
