--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title>首页</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="">
-    <meta name="keywords" content="" />
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css"/>
-    <script type="text/javascript" src="/static/js/jquery-1.8.1.min.js"></script>
-    <style>
-        body {
-            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-            padding-bottom: 60px;
-        }
-    </style>
-    {% block header %}{% endblock %}
-</head>
-<body>
+{% extends "html.html" %}
+{% block main  %}
 <div class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-inner">
         <div class="container">
@@ -48,32 +30,18 @@
                     </li>
                 </ul>
             {% else %}
-            <form class="navbar-form pull-right" method="POST" action="{{ url_for("user.login") }}">
-                <input name="login_name" type="text" class="span2" placeholder="用户名">
-                <input name="password" type="password" class="span2" placeholder="密码">
-                <button type="submit" class="btn btn-primary">登陆</button>
-                &nbsp;&nbsp;
-                <a href="{{ url_for("user.create") }}" class="btn">注册</a>
-            </form>
+                <form class="navbar-form pull-right" method="POST" action="{{ url_for("user.login") }}">
+                    <input name="login_name" type="text" class="span2" placeholder="用户名">
+                    <input name="password" type="password" class="span2" placeholder="密码">
+                    <button type="submit" class="btn btn-primary">登陆</button>
+                    &nbsp;&nbsp;
+                    <a href="{{ url_for("user.create") }}" class="btn">注册</a>
+                </form>
             {% endif %}
         </div>
     </div>
 </div>
 <div class="container">
     {% block content %}{% endblock %}
-
 </div>
-<div class="navbar navbar-fixed-bottom">
-    <div class="navbar-inner">
-        <div class="container">
-            <p class="center">@copyright by Aipu from 2012~2013</p>
-        </div>
-    </div>
-</div>
-<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/static/js/main.js"></script>
-<script type="text/javascript">
-    $(".alert").alert();
-</script>
-</body>
-</html>
+{% endblock %}
