--- a/templates/html.html
+++ b/templates/html.html
@@ -22,7 +22,7 @@
 <div class="navbar navbar-fixed-bottom">
     <div class="navbar-inner">
         <div class="container">
-            <p class="center">@copyright by Aipu from 2012~2013</p>
+            <p class="center">@copyright by Aipu from 2012~2013   Powerby 成都信立讯科技有限公司 through Openstack </p>
         </div>
     </div>
 </div>
