--- a/templates/change_email.html
+++ b/templates/change_email.html
@@ -3,7 +3,7 @@
     {% include "user_nav.html" %}
 {% endblock %}
 
-{% block main %}
+{% block content %}
     <form class="form-horizontal" method="POST">
         <legend>修改注册邮箱地址</legend>
         <div class="control-group">
