--- a/templates/more_info.html
+++ b/templates/more_info.html
@@ -2,7 +2,7 @@
 {% block left %}
 {% include "user_nav.html" %}
 {% endblock %}
-{% block main %}
+{% block content %}
 <form class="form-horizontal" method="POST">
     <legend>修改用户资料</legend>
     <div class="control-group">
