--- a/templates/mid_base.html
+++ b/templates/mid_base.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block content %}
+{% block main %}
     <div class="row">
         <div class="span2"></div>
         <div class="span8">
