--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -2,7 +2,7 @@
 {% block left %}
     {% include "user_nav.html" %}
 {% endblock %}
-{% block main %}
+{% block holder %}
     <form class="form-horizontal" method="POST">
         <legend>修改登陆密码</legend>
         <div class="control-group">
