--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -75,7 +75,7 @@ function add_to_card(pkey){
 {% endblock %}
 {% block left %}
 {% endblock %}
-{% block content %}
+{% block holder %}
     <div class="page-header">
         <h1>云主机列表 》》<small><a href="{{ url_for("product.card") }}">查看购物车</a> </small></h1>
     </div>
