--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,5 +1,8 @@
-{% extends "mid_base.html" %}
-{% block content %}
+{% extends "base_cal2.html" %}
+{% block left %}
+    {% include "oper_nav.html" %}
+{% endblock %}
+{% block holder %}
     <div class="page-header">
         <h1>订单列表<small></small></h1>
     </div>
