--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -11,7 +11,7 @@
     </script>
 {% endblock %}
 {% block holder %}
-<form class="form-horizontal">
+<form class="form-horizontal" method="POST" action="{{ url_for("admin.login") }}">
     <legend>登陆管理平台</legend>
     <div class="control-group">
         <label class="control-label" for="inputEmail">登陆邮箱</label>
