--- a/templates/manage_order.html
+++ b/templates/manage_order.html
@@ -1,4 +1,4 @@
-{% extends "mid_base.html" %}
+{% extends "admin_base.html" %}
 {% block header %}
 <script type="text/javascript">
 function process(url){
@@ -9,7 +9,7 @@ function process(url){
 }
 </script>
 {% endblock %}
-{% block mid %}
+{% block holder %}
 <table class="table">
     <thead>
     <tr>
