--- a/templates/mng_product.html
+++ b/templates/mng_product.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin_base.html" %}
 {% block header %}
 <script type="text/javascript">
 function render_input(key, name, cpu, mem, storage, flover, monthly, yearly){
@@ -11,11 +11,20 @@ function render_input(key, name, cpu, mem, storage, flover, monthly, yearly){
     $("#monthly").val(monthly);
     $("#yearly").val(yearly);
 }
+function delete_product(pkey){
+    $.post('{{ url_for("product.delete_product") }}',{key:pkey},function(d){
+        if(d.r){
+            location.reload();
+        }else{
+            alert(d.info);
+        }
+    },"json");
+}
 </script>
 {% endblock %}
-{% block content %}
+{% block holder %}
     <div class="row">
-        <div class="span4">
+        <div class="span3">
             <form method="POST">
                 <legend>添加／修改产品</legend>
                 <label>产品编号</label>
@@ -43,7 +52,7 @@ function render_input(key, name, cpu, mem, storage, flover, monthly, yearly){
                 <button type="submit" class="btn btn-primary">提交</button>
             </form>
         </div>
-        <div class="span8">
+        <div class="span7">
             <table class="table">
                 <thead>
                     <tr>
@@ -61,6 +70,8 @@ function render_input(key, name, cpu, mem, storage, flover, monthly, yearly){
                             <td>CPU:{{ prod.cpu }}|MEM:{{ prod.memory }}|STORAGE:{{ prod.storage }}</td>
                             <td>
                                 <a class="btn btn-primary" href="javascript:void(0)" onclick="render_input('{{ prod.key }}','{{ prod.name }}','{{ prod.cpu }}','{{ prod.memory }}','{{ prod.storage }}','{{ prod.flover_id }}','{{ prod.monthly_price }}','{{ prod.yearly_price }}')">修改</a>
+                                &nbsp;&nbsp;
+                                <a href="javascript:void(0);" class="btn btn-danger" onclick="delete_product('{{ prod.key }}')">删除产品</a>
                             </td>
                         </tr>
                     {% endfor %}
