--- a/templates/mng_product.html
+++ b/templates/mng_product.html
@@ -45,6 +45,9 @@ function delete_product(pkey){
                 <label>Flover编号</label>
                 <input id="flover" name="flover" type="text" placeholder="输入产品Flover编号">
 
+                <label>产品介绍</label>
+                <input id="detail" name="detail" type="text" placeholder="输入产品介绍">
+
                 <label>价格</label>
                 <input id="monthly" name="monthly" type="text" placeholder="月价格">
                 <input id="yearly" name="yearly" type="text" placeholder="年价格">
